Update MailLayout   -Change 'name' to 'description'   -Change input to textarea for description   -Update List view: Manage filter on column + rename/add column   -Manage copy   -Manage read only mode   -Add a fieldset to manage more easily disabled input in readonly mode   -Set style for readonly label on title   -Minor fix for visibility   -BugFixing

--- a/app/styles/custom/custom.scss
+++ b/app/styles/custom/custom.scss
@@ -396,6 +396,13 @@ a.disabled {
     .view-selector {
       margin-right: 30px;
     }
+    small.label {
+      margin-left: 10px;
+      line-height: 4;
+      i.fa {
+        margin-right: 0.25em;
+      }
+    }
   }
   .btn.btn-primary {
     background-color: #fff;
